--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
 <h1>Home</h1>
+<div>
+    <a th:href="@{/products}">Manage Products</a>
+    <a th:href="@{/categories}">Manage Categories</a>
+</div>
 </body>
 </html>
