--- a/src/main/resources/templates/edit-product.html
+++ b/src/main/resources/templates/edit-product.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Edit Product</title>
+    <link th:href="@{/styles.css}" rel="stylesheet" />
 </head>
 <body>
 <h1>Edit Product</h1>
