--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Products</title>
+    <link th:href="@{/styles.css}" rel="stylesheet" />
 </head>
 <body>
 <h1>Products</h1>
