--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -50,11 +50,34 @@
     <input type="text" id="manufacturer" name="details.manufacturer"/>
     <label for="warranty">Warranty:</label>
     <input type="text" id="warranty" name="details.warranty"/>
+    
     <!-- Category fields -->
-    <label for="category">Category Name:</label>
-    <input type="text" id="category" name="category.name"/>
+        <label for="categorySelect">Existing Categories:</label>
+        <select id="categorySelect" name="category.id">
+            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+        </select>
+        <label for="newCategoryName">New Category Name:</label>
+        <input type="text" id="newCategoryName" name="category.name" disabled/>
+    <button type="button" id="toggle-button">Toggle category</button>
 
     <button type="submit">Add Product</button>
 </form>
+<script>
+    const existingCategory = document.querySelector("#categorySelect");
+    const newCategory = document.querySelector("#newCategoryName");
+    let current = 'existing'
+    function toggleCategory() {
+        if(current === 'existing') {
+            existingCategory.disabled = true
+            newCategory.disabled = false
+            current = 'new'
+        } else {
+            existingCategory.disabled = false
+            newCategory.disabled = true
+            current = 'existing'
+        }
+    }
+    document.querySelector('#toggle-button').addEventListener('click', toggleCategory);
+</script>
 </body>
 </html>
